# bank_service_credit

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
credit/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
credit/migrations/: 0001_initial.py  0002_card_pin.py  0003_remove_paymentschedule_account_and_more.py
microservice_credit/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
tests/: conftest.py  factories.py
tests/credit/: test_card.py  test_credit.py  test_credit_order.py  test_credit_product.py  test_credit_shedule.py
